# chinese-models-investigations

./: .env.example  .gitignore  LICENSE  README.md  falun-gong-qwen.yaml  harry-potter-quote.yaml  kimi-attacker.yaml  kimi-incident.yaml  pyproject.toml  run_experiment.py
activation_oracles/: falun-gong.yaml  great-famine.yaml  peng-shuai.yaml  run_experiment.py  tiananmen.yaml  uyghur.yaml
eval/: consistency.md  correctness.md  eval.py
toolkit/: activation_oracle_guide.md
transcripts/: tiannamen_square.md  uyghur_detention_camps.md
transcripts-for-blog/: arya_falun_gong.md  xinjiang_human_rights_allegations.md  zhuhai_1.md  zhuhai_2.md  zhuhai_3.md
workspace/: openrouter_client.py
